# foobara-py

./: .gitignore  ARCHITECTURE_DIAGRAM.md  CALLBACK_DSL.md  CALLBACK_DSL_MIGRATION_SUMMARY.md  CHANGELOG.md  CHANGELOG_CALLBACK_DSL_MIGRATION.md  CHANGELOG_v0.5.1_PORT.md  CODEBASE_ANALYSIS.md  COMMAND_REFACTOR_NOTES.md  DICT_UTILS_PORT.md  DOCUMENTATION_SUMMARY.md  ENHANCED_CALLBACKS_SUMMARY.md  ERROR_SYSTEM_ENHANCEMENTS.md  FEATURE_PARITY.md  FLUKEBASE_ANALYSIS_EXECUTIVE_SUMMARY.md  FLUKEBASE_FOOBARA_PERFORMANCE_ANALYSIS.md  HTTP_CONNECTOR_GAP.md  MIGRATION_GUIDE.md  OPTIMIZATION_ERROR_HANDLING_SUMMARY.md  PARITY_CHECKLIST.md  PERFORMANCE_COMPARISON.txt  PERFORMANCE_REPORT.md  PORTING_CHANGES_v0.5.1.md  PROPERTY_BASED_TESTING_SUMMARY.md  README.md  REFACTOR_SUMMARY.md  RESEARCH_INDEX.md  STRESS_TEST_SUMMARY.md  SYNC_SUMMARY_2026-01-30.md  TASK_3_SUMMARY.md  TASK_4_SUMMARY.md  TESTING_IMPROVEMENTS_SUMMARY.md  TEST_COVERAGE_COMPARISON.md  TYPESCRIPT_PYTHON_ANALYSIS.md  V0.3.0_RELEASE_SUMMARY.md  V0.5.1_PORT_SUMMARY.md  V0.5.1_QUICK_REFERENCE.md  pyproject.toml  verify_enhanced_callbacks.py
benchmarks/: BENCHMARKS.md  README.md  TASK_SUMMARY.md  baseline_results.json  benchmark_callbacks_baseline.py  benchmark_callbacks_enhanced.py  benchmark_command.py  benchmark_command_execution.py  benchmark_command_execution.rb  benchmark_comprehensive.py  benchmark_transactions.py  ci_benchmark.yml  compare_results.py  run_all_benchmarks.py  stress_test_full_output.txt  stress_test_results.json
docs/: ASYNC_COMMANDS.md  ENHANCED_CALLBACKS_PERFORMANCE_REPORT.md  ERROR_HANDLING.md  ERROR_HANDLING_QUICK_START.md  EUREKA-ecosystem-parity-research.md  FEATURES.md  FEATURE_MATRIX.md  FINAL_CALLBACK_PERFORMANCE_REPORT.md  FOOBARA_RUBY_PYTHON_PATTERN_ANALYSIS.md  FUTURE_STEPS.md  GETTING_STARTED.md  HOW_READABILITY_IMPROVES_PERFORMANCE.md  MIGRATION_GUIDE.md  MIGRATION_V1_TO_V2.md  MIGRATION_v0.3.0.md  PATTERN_ANALYSIS_SUMMARY.md  PATTERN_IMPLEMENTATION_ROADMAP.md  PATTERN_RESEARCH_INDEX.md  QUICK_REFERENCE.md  READABILITY_PERFORMANCE_REPORT.md  README.md  ROADMAP.md  RUBY_PYTHON_QUICK_REFERENCE.md  STATE_MACHINE_COMPARISON.md  TESTING_GUIDE.md  TESTING_INDEX.md  TESTING_QUICK_REFERENCE.md  TYPE_SYSTEM_ENHANCEMENTS.md  TYPE_SYSTEM_GUIDE.md  TYPE_SYSTEM_QUICK_REFERENCE.md  enhanced_callbacks.md  enhanced_callbacks_quickstart.md
examples/: basic_command.py  basic_usage.py  callback_dsl_example.py  callback_migration_guide.py  dict_utils_example.py  enhanced_callbacks_demo.py  entity_persistence.py  error_handling_demo.py  lifecycle_hooks.py  mcp_server.py
foobara_py/: __init__.py
tests/: __init__.py  conftest.py  factories.py  helpers.py  property_strategies.py  test_agent_advanced.py  test_agent_backed_command.py  test_agent_backed_command_advanced.py  test_ai_agent.py  test_anthropic_api.py  test_associations.py  test_async_command.py  test_async_command_examples.py  test_auth.py  test_auth_commands.py  test_auth_comprehensive.py  test_auth_http.py  test_autocrud_generator.py  test_cached_command.py  test_callback_dsl.py  test_callbacks_enhanced.py  test_celery_connector.py  test_cli.py  test_cli_connector_generator.py  test_command.py  test_command_generator.py  test_command_lifecycle.py  test_desugarizers.py  test_detached_entity.py  test_dict_utils.py  test_domain.py  test_domain_dependencies.py  test_domain_generator.py  test_domain_mapper.py  test_domain_mapper_generator.py  test_enhanced_processors.py  test_entity.py  test_entity_callbacks.py  test_error_enhancements.py  test_errors.py  (+45 more)
tools/: ACCURACY_REPORT.md  (+7 more)
(+208 files in other folders)
